# quick-bazel

./: .bazelrc  .clangd  .gitignore  MODULE.bazel  bazel_downloader.cfg  makefile
app/: BUILD.bazel  main.cpp
benchmark/: BUILD.bazel  benchmark_demo.cpp  regex_bench.cpp
example/libdemo/: BUILD.bazel  boost_geometry_demo.cpp  greet.proto
include/: BUILD.bazel  downloader.h
libdemo/boost/: BUILD.bazel
libdemo/fastdds/: BUILD.bazel  fastdds_publisher.cpp  fastdds_subscriber.cpp  fastddsgen.bzl
libdemo/lib/: BUILD.bazel  logger.cpp  logger.h  logger_test.cpp
libdemo/mqtt/: BUILD.bazel  mqtt_demo.cpp
libdemo/protobuf/: BUILD.bazel  address_book.proto  common.proto  protobuf_demo.cpp
libdemo/utils/: spdlog_demo.cpp
test/: BUILD.bazel  gtest.cpp
tools/: BUILD.bazel
