module(name = "quick-bazel")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

bazel_dep(name = "rules_cc", version = "0.0.17")

bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "curl", version = "8.8.0.bcr.3")
