module(name = "quick-bazel")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

# rules
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.6.1")

# frame
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")

# utils
bazel_dep(name = "fmt", version = "11.2.0.bcr.1")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "re2", version = "2025-08-12")
bazel_dep(name = "tl-expected", version = "1.1.0")

# net
bazel_dep(name = "curl", version = "8.8.0.bcr.3")
# bazel_dep(name = "asio", version = "1.34.2")
bazel_dep(name = "asio", version = "1.28.2")
bazel_dep(name = "paho.mqtt.cpp", version = "1.5.2")

# all in one
bazel_dep(name = "abseil-cpp", version = "20250512.1")

# work
bazel_dep(name = "boost.geometry", version = "1.87.0")
bazel_dep(name = "protobuf", version = "32.1")

# DDS
bazel_dep(name = "fastdds", version = "3.1.1.bcr.1")
