load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "benchmark_demo",
    srcs = ["benchmark_demo.cpp"],
    deps = [
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "regex_bench",
    srcs = [
        "regex_bench.cpp",
    ],
    deps = [
        "@abseil-cpp//absl/strings",
        "@google_benchmark//:benchmark",
        "@re2",
    ],
)
