load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("@protobuf//bazel:py_proto_library.bzl","py_proto_library")

cc_binary(
    name = "spdlog_demo",
    srcs = ["spdlog_demo.cpp"],
    deps = [
        "@spdlog",
    ],
)

cc_binary(
    name = "boost_geometry_demo",
    srcs = ["boost_geometry_demo.cpp"],
    deps = [
        "@boost.geometry//:boost.geometry"
    ]
)
